--- a/Client/Client/Example.css
+++ b/Client/Client/Example.css
@@ -2,7 +2,7 @@
 .label {
   -fx-font-size: 16px;
   -fx-font-weight: bold;
-  -fx-text-fill: #0000C0;
+  -fx-text-fill: #006400;
   -fx-alignment: center-right;
 }
 
@@ -18,16 +18,43 @@
   -fx-font-weight: bold;
   -fx-text-fill: #C00000;
   -fx-min-width: 200;
+  -fx-background-color:
+  	linear-gradient(from 0% 93% to 0% 100%, #8FBC8F 0%, #006400 100%),
+	#8FBC8F,
+	#006400,
+	radial-gradient(center 50% 50%, radius 100%, #8FBC8F, #006400);
+}
+
+.button:pressed {
+	-fx-background-color: red;
+	-fx-text-fill: white;
+	-fx-effect: dropshadow( one-pass-box, black, 2, 1.0, 1, 1);
+}
+	
+.button:hover {
+	-fx-effect: dropshadow( one-pass-box, black, 2, 1.0, 1, 1);
 }
 
 .text-area {
   -fx-font-family: monospace;
   -fx-font-size: 12px;
+  -fx-background-color: #FFFACD;
+  -fx-alignment: center-left;
+  -fx-text-fill: #000000;
+}
+
+.text-area .content {
+    -fx-background-color: #FFFAFA;
+}
+
+.box {
+		-fx-background-color: #BDB76B
 }
 
 #TopBox {
 	-fx-alignment: center;
 	-fx-spacing: 5px;
+
 }
 
 #BottomBox {
