Fixed some bugs

--- a/Client/UserMenu/Example.css
+++ b/Client/UserMenu/Example.css
@@ -64,9 +64,13 @@
     -fx-border-color: transparent #1d1d1d transparent #1d1d1d;
     -fx-background-color: transparent, derive(#1d1d1d,20%);
 }
+.split-pane:vertical > .split-pane-divider {
+    -fx-border-color: transparent #c0c0c0 transparent #c0c0c0;
+    -fx-background-color: transparent, derive(#c0c0c0,20%);
+}
 
 .split-pane {
-    -fx-padding: 1 0 0 0;
+    -fx-padding: 0 1 0 1;
 }
 
 .menu-bar {
